--- a/sources/ARES/src/pages/geo/geo.html
+++ b/sources/ARES/src/pages/geo/geo.html
@@ -5,11 +5,12 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>Geolocation</ion-title>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>Géolocalisation</ion-title>
   </ion-navbar>
-
 </ion-header>
 
 
