--- a/sources/ARES/src/pages/satisfaction/satisfaction.html
+++ b/sources/ARES/src/pages/satisfaction/satisfaction.html
@@ -5,11 +5,12 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>SatisfactionPage</ion-title>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>Satisfaction</ion-title>
   </ion-navbar>
-
 </ion-header>
 
 
