--- a/sources/ARES/src/pages/camera/camera.html
+++ b/sources/ARES/src/pages/camera/camera.html
@@ -17,9 +17,9 @@
 <ion-content class="home">
   <ion-card>
     <ion-card-content>
-      Hello World, this is my camera app
+      Prenez votre photo pour valider ton Audit !
 
-      <button ion-button (click)="takePhoto()">Take a Picture</button>
+      <button ion-button (click)="takePhoto()">Prendre photo!</button>
 
       <p><img src="{{ myphoto }}"></p>
 
