--- a/sources/ARES/src/pages/welcome/welcome.html
+++ b/sources/ARES/src/pages/welcome/welcome.html
@@ -2,9 +2,7 @@
   <div class="splash-bg"></div>
   <div class="splash-info">
     <div class="splash-logo"></div>
-    <div class="splash-intro">
-      {{ 'WELCOME_INTRO' | translate }}
-    </div>
+    <div class="splash-intro"></div>
   </div>
   <div padding>
     <button ion-button block (click)="signup()">{{ 'SIGNUP' | translate }}</button>
